manifests/scots-lab/apps/it-tools/_bootstrap.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
  name: it-tools
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
spec:
  ports:
  - name: proxy
    port: 4180
    targetPort: 4180
  selector:
    app: it-tools
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: it-tools
  name: it-tools
  namespace: it-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
      - image: corentinth/it-tools:2024.5.13-a0bc346
        name: it-tools
        ports:
        - containerPort: 80
          name: http
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 32Mi
      - args:
        - --provider=oidc
        - --oidc-issuer-url=https://auth.srbii.com/realms/homelab
        - --upstream=http://127.0.0.1:80
        - --http-address=0.0.0.0:4180
        - --email-domain=*
        - --pass-user-headers=false
        - --cookie-secure=true
        - --cookie-name=_oauth2_ittools
        - --redirect-url=https://tools.srbii.com/oauth2/callback
        - --whitelist-domain=.srbii.com
        - --skip-provider-button=true
        - --session-cookie-minimal=true
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          name: proxy
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 32Mi
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/description: Developer Utilities
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Tools
    gethomepage.dev/href: https://tools.srbii.com
    gethomepage.dev/icon: it-tools.png
    gethomepage.dev/name: IT-Tools
    gethomepage.dev/weight: "41"
  name: it-tools
  namespace: it-tools
spec:
  hostnames:
  - tools.srbii.com
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  rules:
  - backendRefs:
    - name: it-tools
      port: 4180
    matches:
    - path:
        type: PathPrefix
        value: /
